[gd_scene load_steps=5 format=3 uid="uid://myedi2t62wb0"]

[ext_resource type="Script" uid="uid://bvdmu0hslp8ur" path="res://Scripts/Level_Button.gd" id="1_28flt"]
[ext_resource type="Script" uid="uid://cgwu88jqnsves" path="res://Scripts/title_menu.gd" id="1_48xlc"]

[sub_resource type="LabelSettings" id="LabelSettings_erv1k"]
font_size = 70

[sub_resource type="LabelSettings" id="LabelSettings_48xlc"]
font_size = 50

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title_Menu" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_48xlc")

[node name="Title" type="VBoxContainer" parent="Title_Menu"]
layout_mode = 2

[node name="Title" type="Label" parent="Title_Menu/Title"]
layout_mode = 2
text = "Inkarnation"
label_settings = SubResource("LabelSettings_erv1k")

[node name="PlayButton" type="Button" parent="Title_Menu/Title"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Play"

[node name="QuitButton" type="Button" parent="Title_Menu/Title"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Quit"

[node name="Level_Menu" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Back_Button" type="Button" parent="Level_Menu"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 0
offset_right = 200.0
offset_bottom = 100.0
theme_override_font_sizes/font_size = 40
text = "Back"

[node name="Level_Center" type="CenterContainer" parent="Level_Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 198.0
offset_top = 223.0
offset_right = -198.0
offset_bottom = -223.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Level_Menu/Level_Center"]
layout_mode = 2

[node name="Label" type="Label" parent="Level_Menu/Level_Center/VBoxContainer"]
layout_mode = 2
text = "Levels"
label_settings = SubResource("LabelSettings_48xlc")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Levels" type="GridContainer" parent="Level_Menu/Level_Center/VBoxContainer"]
layout_mode = 2
columns = 10

[node name="Level_01" type="Button" parent="Level_Menu/Level_Center/VBoxContainer/Levels"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "1"
script = ExtResource("1_28flt")

[node name="Level_02" type="Button" parent="Level_Menu/Level_Center/VBoxContainer/Levels"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "1"
script = ExtResource("1_28flt")
level = 2

[node name="Level_03" type="Button" parent="Level_Menu/Level_Center/VBoxContainer/Levels"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "1"
script = ExtResource("1_28flt")
level = 3

[node name="Level_04" type="Button" parent="Level_Menu/Level_Center/VBoxContainer/Levels"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "1"
script = ExtResource("1_28flt")
level = 4

[node name="Level_05" type="Button" parent="Level_Menu/Level_Center/VBoxContainer/Levels"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "1"
script = ExtResource("1_28flt")
level = 5

[node name="Level_06" type="Button" parent="Level_Menu/Level_Center/VBoxContainer/Levels"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "1"
script = ExtResource("1_28flt")
level = 6

[node name="Level_07" type="Button" parent="Level_Menu/Level_Center/VBoxContainer/Levels"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "1"
script = ExtResource("1_28flt")
level = 7

[node name="Level_08" type="Button" parent="Level_Menu/Level_Center/VBoxContainer/Levels"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "1"
script = ExtResource("1_28flt")
level = 8

[node name="Level_09" type="Button" parent="Level_Menu/Level_Center/VBoxContainer/Levels"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 50
disabled = true
text = "1"
script = ExtResource("1_28flt")
level = 9

[node name="Level_10" type="Button" parent="Level_Menu/Level_Center/VBoxContainer/Levels"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 50
disabled = true
text = "1"
script = ExtResource("1_28flt")
level = 10

[node name="Level_11" type="Button" parent="Level_Menu/Level_Center/VBoxContainer/Levels"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 50
disabled = true
text = "1"
script = ExtResource("1_28flt")
level = 11

[node name="Level_12" type="Button" parent="Level_Menu/Level_Center/VBoxContainer/Levels"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 50
disabled = true
text = "1"
script = ExtResource("1_28flt")
level = 12

[node name="Level_13" type="Button" parent="Level_Menu/Level_Center/VBoxContainer/Levels"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 50
disabled = true
text = "1"
script = ExtResource("1_28flt")
level = 13

[node name="Level_14" type="Button" parent="Level_Menu/Level_Center/VBoxContainer/Levels"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 50
disabled = true
text = "4"
script = ExtResource("1_28flt")
level = 14

[node name="Level_15" type="Button" parent="Level_Menu/Level_Center/VBoxContainer/Levels"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 50
disabled = true
text = "15"
script = ExtResource("1_28flt")
level = 15

[connection signal="pressed" from="Title_Menu/Title/PlayButton" to="Title_Menu" method="play_button_pressed"]
[connection signal="pressed" from="Title_Menu/Title/QuitButton" to="Title_Menu" method="quit_button_pressed"]
[connection signal="pressed" from="Level_Menu/Back_Button" to="Title_Menu" method="back_button_pressed"]
[connection signal="pressed" from="Level_Menu/Level_Center/VBoxContainer/Levels/Level_01" to="Level_Menu/Level_Center/VBoxContainer/Levels/Level_01" method="_on_pressed"]
[connection signal="pressed" from="Level_Menu/Level_Center/VBoxContainer/Levels/Level_02" to="Level_Menu/Level_Center/VBoxContainer/Levels/Level_02" method="_on_pressed"]
[connection signal="pressed" from="Level_Menu/Level_Center/VBoxContainer/Levels/Level_03" to="Level_Menu/Level_Center/VBoxContainer/Levels/Level_03" method="_on_pressed"]
[connection signal="pressed" from="Level_Menu/Level_Center/VBoxContainer/Levels/Level_04" to="Level_Menu/Level_Center/VBoxContainer/Levels/Level_04" method="_on_pressed"]
[connection signal="pressed" from="Level_Menu/Level_Center/VBoxContainer/Levels/Level_05" to="Level_Menu/Level_Center/VBoxContainer/Levels/Level_05" method="_on_pressed"]
[connection signal="pressed" from="Level_Menu/Level_Center/VBoxContainer/Levels/Level_06" to="Level_Menu/Level_Center/VBoxContainer/Levels/Level_06" method="_on_pressed"]
[connection signal="pressed" from="Level_Menu/Level_Center/VBoxContainer/Levels/Level_07" to="Level_Menu/Level_Center/VBoxContainer/Levels/Level_07" method="_on_pressed"]
[connection signal="pressed" from="Level_Menu/Level_Center/VBoxContainer/Levels/Level_08" to="Level_Menu/Level_Center/VBoxContainer/Levels/Level_08" method="_on_pressed"]
[connection signal="pressed" from="Level_Menu/Level_Center/VBoxContainer/Levels/Level_09" to="Level_Menu/Level_Center/VBoxContainer/Levels/Level_09" method="_on_pressed"]
[connection signal="pressed" from="Level_Menu/Level_Center/VBoxContainer/Levels/Level_10" to="Level_Menu/Level_Center/VBoxContainer/Levels/Level_10" method="_on_pressed"]
[connection signal="pressed" from="Level_Menu/Level_Center/VBoxContainer/Levels/Level_11" to="Level_Menu/Level_Center/VBoxContainer/Levels/Level_11" method="_on_pressed"]
[connection signal="pressed" from="Level_Menu/Level_Center/VBoxContainer/Levels/Level_12" to="Level_Menu/Level_Center/VBoxContainer/Levels/Level_12" method="_on_pressed"]
[connection signal="pressed" from="Level_Menu/Level_Center/VBoxContainer/Levels/Level_13" to="Level_Menu/Level_Center/VBoxContainer/Levels/Level_13" method="_on_pressed"]
[connection signal="pressed" from="Level_Menu/Level_Center/VBoxContainer/Levels/Level_14" to="Level_Menu/Level_Center/VBoxContainer/Levels/Level_14" method="_on_pressed"]
[connection signal="pressed" from="Level_Menu/Level_Center/VBoxContainer/Levels/Level_15" to="Level_Menu/Level_Center/VBoxContainer/Levels/Level_15" method="_on_pressed"]
